--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2944,10 +2944,9 @@ msgid "Partial import: skip queries"
 msgstr "Partial import: skip queries"
 
 #: libraries/config/messages.inc.php:256
-#, fuzzy
 #| msgid "Do not use <code>AUTO_INCREMENT</code> for zero values"
 msgid "Do not use AUTO_INCREMENT for zero values"
-msgstr "Do not use <code>AUTO_INCREMENT</code> for zero values"
+msgstr "Do not use AUTO_INCREMENT for zero values"
 
 #: libraries/config/messages.inc.php:259
 msgid "Initial state for sliders"
