--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3143,7 +3143,7 @@ msgstr "Maximum displayed SQL length"
 #: libraries/config/messages.inc.php:299 libraries/config/messages.inc.php:304
 #: libraries/config/messages.inc.php:331
 msgid "Users cannot set a higher value"
-msgstr ""
+msgstr "Users cannot set a higher value"
 
 #: libraries/config/messages.inc.php:300
 msgid "Maximum number of databases displayed in left frame and database list"
