--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3176,7 +3176,6 @@ msgid "Maximum tables"
 msgstr "Maximum tables"
 
 #: libraries/config/messages.inc.php:307
-#, fuzzy
 #| msgid ""
 #| "Disable the default warning that is displayed if mcrypt is missing for "
 #| "cookie authentication.  You can set this parameter to <tt>TRUE</tt> to "
@@ -3186,8 +3185,7 @@ msgid ""
 "cookie authentication"
 msgstr ""
 "Disable the default warning that is displayed if mcrypt is missing for "
-"cookie authentication.  You can set this parameter to <tt>TRUE</tt> to stop "
-"this message from appearing."
+"cookie authentication"
 
 #: libraries/config/messages.inc.php:308
 msgid "mcrypt warning"
