--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3210,7 +3210,7 @@ msgstr "Show left delete link"
 
 #: libraries/config/messages.inc.php:312
 msgid "Show right delete link"
-msgstr ""
+msgstr "Show right delete link"
 
 #: libraries/config/messages.inc.php:313
 msgid "Use natural order for sorting table and database names"
