--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3776,7 +3776,7 @@ msgstr ""
 
 #: libraries/config/messages.inc.php:427
 msgid "User preferences storage table"
-msgstr ""
+msgstr "User preferences storage table"
 
 #: libraries/config/messages.inc.php:429
 msgid "User for config auth"
