--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 14:06+0200\n"
+"PO-Revision-Date: 2010-08-24 14:07+0200\n"
 "Last-Translator: Robert Readman <robert_readman@hotmail.com>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -3934,7 +3934,7 @@ msgstr "Skip locked tables"
 
 #: libraries/config/messages.inc.php:461
 msgid "Requires SQL Validator to be enabled"
-msgstr ""
+msgstr "Requires SQL Validator to be enabled"
 
 #: libraries/config/messages.inc.php:463
 #: libraries/display_change_password.lib.php:40
