--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4009,6 +4009,8 @@ msgid ""
 "Textarea size (rows) in edit mode, this value will be emphasized for SQL "
 "query textareas (*2) and for query window (*1.25)"
 msgstr ""
+"Textarea size (rows) in edit mode, this value will be emphasized for SQL "
+"query textareas (*2) and for query window (*1.25)"
 
 #: libraries/config/messages.inc.php:475
 #, fuzzy
