--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4013,10 +4013,9 @@ msgstr ""
 "query textareas (*2) and for query window (*1.25)"
 
 #: libraries/config/messages.inc.php:475
-#, fuzzy
 #| msgid "CHAR textarea rows"
 msgid "Textarea rows"
-msgstr "CHAR textarea rows"
+msgstr "Textarea rows"
 
 #: libraries/config/messages.inc.php:476
 msgid "Title of browser window when a database is selected"
