--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4019,7 +4019,7 @@ msgstr "Textarea rows"
 
 #: libraries/config/messages.inc.php:476
 msgid "Title of browser window when a database is selected"
-msgstr ""
+msgstr "Title of browser window when a database is selected"
 
 #: libraries/config/messages.inc.php:478
 msgid "Title of browser window when nothing is selected"
