--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4032,7 +4032,7 @@ msgstr "Default title"
 
 #: libraries/config/messages.inc.php:480
 msgid "Title of browser window when a server is selected"
-msgstr ""
+msgstr "Title of browser window when a server is selected"
 
 #: libraries/config/messages.inc.php:482
 msgid "Title of browser window when a table is selected"
