--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4123,10 +4123,9 @@ msgid "Cookie authentication"
 msgstr "Cookie authentication"
 
 #: libraries/config/setup.forms.php:48
-#, fuzzy
 #| msgid "Swekey authentication"
 msgid "HTTP authentication"
-msgstr "Swekey authentication"
+msgstr "HTTP authentication"
 
 #: libraries/config/setup.forms.php:51
 #, fuzzy
