--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -5862,7 +5862,7 @@ msgstr "SQL history"
 
 #: libraries/relation.lib.php:141
 msgid "User preferences"
-msgstr ""
+msgstr "User preferences"
 
 #: libraries/relation.lib.php:145
 msgid "Quick steps to setup advanced features:"
