Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6024,7 +6024,7 @@ msgstr "No tables"
 
 #: libraries/schema/Export_Relation_Schema.class.php:209
 msgid "SCHEMA ERROR: "
-msgstr ""
+msgstr "SCHEMA ERROR: "
 
 #: libraries/schema/Pdf_Relation_Schema.class.php:896
 #: libraries/schema/Pdf_Relation_Schema.class.php:1124
