--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6087,10 +6087,9 @@ msgid "Display relational schema"
 msgstr "Display relational schema"
 
 #: libraries/schema/User_Schema.class.php:356
-#, fuzzy
 #| msgid "CSV"
 msgid "SVG"
-msgstr "CSV"
+msgstr "SVG"
 
 #: libraries/schema/User_Schema.class.php:357
 msgid "DIA"
