--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6199,10 +6199,9 @@ msgid "Synchronize"
 msgstr "Synchronise"
 
 #: libraries/server_links.inc.php:97
-#, fuzzy
 #| msgid "settings"
 msgid "Settings"
-msgstr "settings"
+msgstr "Settings"
 
 #: libraries/server_synchronize.lib.php:1337 server_synchronize.php:1108
 msgid "Source database"
