--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6930,10 +6930,9 @@ msgid "Cannot save settings, submitted form contains errors"
 msgstr "Cannot save settings, submitted form contains errors"
 
 #: prefs_manage.php:80
-#, fuzzy
 #| msgid "Could not load default configuration from: %1$s"
 msgid "Could not import configuration"
-msgstr "Could not load default configuration from: %1$s"
+msgstr "Could not import configuration"
 
 #: prefs_manage.php:112
 msgid "Configuration contains incorrect data for some fields."
