--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6936,7 +6936,7 @@ msgstr "Could not import configuration"
 
 #: prefs_manage.php:112
 msgid "Configuration contains incorrect data for some fields."
-msgstr ""
+msgstr "Configuration contains incorrect data for some fields."
 
 #: prefs_manage.php:128
 msgid "Do you want to import remaining settings?"
