--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6940,7 +6940,7 @@ msgstr "Configuration contains incorrect data for some fields."
 
 #: prefs_manage.php:128
 msgid "Do you want to import remaining settings?"
-msgstr ""
+msgstr "Do you want to import remaining settings?"
 
 #: prefs_manage.php:225 prefs_manage.php:251
 msgid "Saved on: @DATE@"
