--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6953,7 +6953,7 @@ msgstr "Import from file"
 
 #: prefs_manage.php:245
 msgid "Import from browser's storage"
-msgstr ""
+msgstr "Import from browser's storage"
 
 #: prefs_manage.php:248
 msgid "Settings will be imported from your browser's local storage."
