--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6960,10 +6960,9 @@ msgid "Settings will be imported from your browser's local storage."
 msgstr "Settings will be imported from your browser's local storage."
 
 #: prefs_manage.php:254
-#, fuzzy
 #| msgid "Other core settings"
 msgid "You have no saved settings!"
-msgstr "Other core settings"
+msgstr "You have no saved settings!"
 
 #: prefs_manage.php:258 prefs_manage.php:312
 msgid "This feature is not supported by your web browser"
