--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6966,7 +6966,7 @@ msgstr "You have no saved settings!"
 
 #: prefs_manage.php:258 prefs_manage.php:312
 msgid "This feature is not supported by your web browser"
-msgstr ""
+msgstr "This feature is not supported by your web browser"
 
 #: prefs_manage.php:263
 #, fuzzy
