--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6969,10 +6969,9 @@ msgid "This feature is not supported by your web browser"
 msgstr "This feature is not supported by your web browser"
 
 #: prefs_manage.php:263
-#, fuzzy
 #| msgid "Server configuration"
 msgid "Merge with current configuration"
-msgstr "Server configuration"
+msgstr "Merge with current configuration"
 
 #: prefs_manage.php:277
 #, php-format
