Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6979,6 +6979,8 @@ msgid ""
 "You can set more settings by modifying config.inc.php, eg. by using %sSetup "
 "script%s."
 msgstr ""
+"You can set more settings by modifying config.inc.php, eg. by using %sSetup "
+"script%s."
 
 #: prefs_manage.php:302
 msgid "Save to browser's storage"
