--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6996,7 +6996,7 @@ msgstr "Existing settings will be overwritten!"
 
 #: prefs_manage.php:323
 msgid "You can reset all your settings and restore them to default values"
-msgstr ""
+msgstr "You can reset all your settings and restore them to default values"
 
 #: querywindow.php:93
 msgid "Import files"
