--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7012,10 +7012,9 @@ msgid "<b>%s</b> table not found or not set in %s"
 msgstr "<b>%s</b> table not found or not set in %s"
 
 #: schema_export.php:46
-#, fuzzy
 #| msgid "The %s table doesn't exist!"
 msgid "File doesn't exist"
-msgstr "The %s table doesn't exist!"
+msgstr "File doesn't exist"
 
 #: server_binlog.php:106
 msgid "Select binary log to view"
